# interprocess

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-0BSD.txt  LICENSE.txt  README.md  README.tpl  build.rs  checks-and-tests.py  deny.toml  example_main.rs  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: checks_and_tests.yml  rust.yml
examples/: async_client.rs  async_local_socket_client.rs  async_local_socket_server.rs  async_server.rs  ipc-service.rs  local_socket_client.rs  local_socket_server.rs  lockstep_teletype_client.rs  lockstep_teletype_server.rs  server-ipc.rs  tokio_named_pipe_client.rs  tokio_named_pipe_server.rs  unidirectional_teletype_client.rs  unidirectional_teletype_server.rs
examples/local_socket/: client.rs  server.rs
examples/local_socket/sync/: listener.rs  stream.rs
examples/local_socket/tokio/: listener.rs  stream.rs
examples/lockstep_teletype/: client.rs  main.rs  server.rs
examples/named_pipe/sync/: listener.rs
examples/named_pipe/sync/stream/: bytes.rs  msg.rs
examples/named_pipe/tokio/: listener.rs
examples/named_pipe/tokio/stream/: bytes.rs  msg.rs
examples/tokio_local_socket/: client.rs  main.rs  server.rs
examples/tokio_named_pipe/: client.rs  main.rs  server.rs
examples/tokio_udsocket/: inner.rs  main.rs
examples/tokio_udstream/: client.rs  main.rs  server.rs
examples/unidirectional_teletype/: client.rs  server.rs
examples/unnamed_pipe/sync/: main.rs  side_a.rs  side_b.rs
examples/unnamed_pipe/tokio/: main.rs  side_a.rs  side_b.rs
inspect-platform/: libc_wrappers.rs  main.rs  unix.rs  util.rs
src/: atomic_enum.rs  bound_util.rs  error.rs  lib.rs  local_socket.rs  macros.rs  misc.rs  platform_check.rs  reliable_read_msg.rs  reliable_recv_msg.rs  sealed.rs  try_clone.rs  unnamed_pipe.rs
src/local_socket/: concurrency_detector.rs  enumdef.rs  impls.rs  listener.rs  mod.rs  name.rs  name_type_support.rs  peer_creds.rs  stream.rs  to_name.rs
src/local_socket/listener/: enum.rs  options.rs  trait.rs
src/local_socket/name/: inner.rs  to_name.rs  type.rs
src/local_socket/stream/: enum.rs  mod.rs  options.rs  trait.rs
src/local_socket/tokio/: listener.rs  mod.rs  stream.rs
src/local_socket/tokio/listener/: enum.rs  trait.rs
src/local_socket/tokio/stream/: enum.rs  mod.rs  read_half.rs  trait.rs  write_half.rs
src/macros/: derive_mut_iorw.rs  derive_raw.rs  derive_trivconv.rs  forward_as_ref.rs  forward_fmt.rs  forward_handle_and_fd.rs  forward_iorw.rs  forward_to_self.rs  forward_trait_method.rs  forward_try_clone.rs  handle_and_fd.rs  import_tables.rs  mod.rs  ok_or_ret_errno.rs
src/nonblocking/: imports.rs  local_socket.rs  mod.rs
src/os/: mod.rs  unix.rs  windows.rs
src/os/unix/: c_wrappers.rs  cfg_doc_templates.rs  fdops.rs  fifo_file.rs  imports.rs  local_socket.rs  mod.rs  signal.rs  ud_addr.rs  uds_local_socket.rs  udsocket.rs  unnamed_pipe.rs
src/os/unix/local_socket/: dispatch.rs  dispatch_sync.rs  dispatch_tokio.rs  listener.rs  mod.rs  name.rs  name_type.rs  peer_creds.rs  stream.rs  to_name.rs
src/os/unix/local_socket/tokio/: listener.rs  mod.rs  stream.rs
src/os/unix/uds_local_socket/: listener.rs  stream.rs
src/os/unix/uds_local_socket/tokio/: listener.rs  stream.rs
src/os/unix/udsocket/: ancillary.rs  ancillary_io.rs  ancillary_old.rs  ancwrap.rs  c_wrappers.rs  credentials.rs  datagram.rs  listener.rs  mod.rs  path.rs  path_drop_guard.rs  socket.rs  socket_trait.rs  stream.rs  tests.rs  util.rs
src/os/unix/udsocket/ancillary_io/: mod.rs  partappl.rs  sync.rs
src/os/unix/udsocket/cmsg/: buffer.rs  (+6 more)
src/os/unix/unnamed_pipe/: tokio.rs
src/os/windows/: adv_handle.rs  c_wrappers.rs  file_handle.rs  impersonation_guard.rs  imports.rs  limbo_pool.rs  linger_pool.rs  local_socket.rs  mailslot.rs  maybe_arc.rs  misc.rs  mod.rs  named_pipe.rs  needs_flush.rs  path_conversion.rs  security_descriptor.rs  share_handle.rs  signal.rs  sync_pipe_limbo.rs  tokio_flusher.rs  unnamed_pipe.rs
src/os/windows/limbo/: sync.rs  tokio.rs
src/os/windows/local_socket/: dispatch.rs  dispatch_sync.rs  dispatch_tokio.rs  listener.rs  mod.rs  name.rs  name_type.rs  peer_creds.rs  stream.rs  to_name.rs
src/os/windows/named_pipe/: atomic_enum.rs  c_wrappers.rs  concurrency_detector.rs  enums.rs  instancer.rs  limbo_pool.rs  listener.rs  maybe_arc.rs  mod.rs  needs_flush.rs  path_conversion.rs  pipeops.rs  stream.rs  wait_timeout.rs
src/os/windows/security_descriptor/: as_security_descriptor.rs  borrowed.rs  c_wrappers.rs  ext.rs  owned.rs  try_clone.rs
src/os/windows/unnamed_pipe/: tokio.rs
src/unnamed_pipe/: tokio.rs
tests/: index.rs  local_socket.rs  named_pipe.rs  tokio_local_socket.rs  tokio_named_pipe.rs  tokio_unnamed_pipe.rs  udstream.rs  unnamed_pipe.rs
tests/local_socket/: basic.rs  main.rs  no_client.rs  no_server.rs  stream.rs  timeout.rs
tests/named_pipe/: basic_bytes.rs  basic_bytes_unidir.rs  basic_msg_unidir.rs  bytes.rs  bytes_unidir_client_to_server.rs  bytes_unidir_server_to_client.rs  main.rs  msg.rs  msg_unidir_client_to_server.rs  msg_unidir_server_to_client.rs
tests/os/unix/: local_socket_fake_ns.rs  local_socket_mode.rs
tests/os/unix/local_socket/: fake_ns.rs  mode.rs  try_overwrite.rs
tests/os/windows/: local_socket_security_descriptor.rs  named_pipe.rs  tokio_named_pipe.rs
tests/os/windows/local_socket_security_descriptor/: null_dacl.rs  sd_graft.rs
tests/os/windows/named_pipe/: bytes.rs  msg.rs
tests/os/windows/tokio_named_pipe/: bytes.rs
tests/tokio_local_socket/: main.rs  no_server.rs  off_runtime_drop.rs  stream.rs
tests/tokio_named_pipe/: basic_bytes.rs  basic_bytes_unidir.rs  basic_msg.rs  basic_msg_unidir.rs  bytes.rs  bytes_unidir_client_to_server.rs  bytes_unidir_server_to_client.rs  main.rs  msg.rs  msg_unidir_client_to_server.rs  msg_unidir_server_to_client.rs
tests/tokio_unnamed_pipe/: basic.rs
tests/udsocket/: credentials.rs  datagram.rs  main.rs  stream.rs
tests/unnamed_pipe/: basic.rs
tests/util/: choke.rs  drive.rs  eyre.rs  mod.rs  namegen.rs  tokio.rs  wdt.rs  xorshift.rs
(+97 files in other folders)
