[package]
name = "interprocess"
version = "2.0.0"
authors = ["Kotauskas <v.toncharov@gmail.com>"]
edition = "2021"
rust-version = "1.74"
resolver = "2"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kotauskas/interprocess"

description = "Interprocess communication toolkit"
categories = ["os", "os::unix-apis", "os::windows-apis", "asynchronous"]
keywords = ["ipc", "pipe"]

autotests = false

exclude = [
    "/.github/",
    "/README.tpl",
    "/Cargo.lock",
    "/.gitignore",
    "interprocess.code-workspace",
]

[features]
default = []
async = []
tokio = ["dep:tokio", "async"]
doc_cfg = []

[dependencies]
tokio = { version = "1.32.0", features = [
    "sync",
    "rt-multi-thread",
    "net",
    "time",
    "io-util",
], optional = true }
to_method = "1.1"
cfg-if = "1.0.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }
recvmsg = "1.0.0"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.137", features = ["extra_traits"] }

[dev-dependencies]
tokio = { version = "1.28.0", features = [
    "rt-multi-thread",
    "io-util",
    "sync",
    "macros",
] }
color-eyre = "0.6.2"

[package.metadata.docs.rs]
features = ["doc_cfg", "tokio"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
    "x86_64-unknown-freebsd",
]
# TODO add all of the other supported targets
